fix for broken layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ li a:hover {
     color: #fff;
 }
 
-.page-content{
+.index-page-content{
     display: flex;
     flex-direction: row;
     justify-content: center;
